# socp

./: .gitignore
src/: CMakeLists.txt
src/models/: CMakeLists.txt
src/models/opinion_with_interactions/: CMakeLists.txt
tests/: CMakeLists.txt  testOpinionWithInteractions.cpp
